--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,71 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  win: circleci/windows@2.2.0
 jobs:
-  build-and-test:
+  build_linux:
     executor:
       name: node/default
+      tag: '10.4'
     steps:
       - checkout
       - node/with-cache:
           steps:
+            - run: sudo npm install -g n
+            - run: sudo n 11.10.1
+            - run: sudo apt-get update
+            - run: sudo apt-get install -y g++ gcc make python2.7 pkg-config libx11-dev libxkbfile-dev
+            - run: sudo apt-get install libsecret-1-dev
+            - run: sudo apt-get install fakeroot rpm
+            - run: sudo npm install -g node-gyp
+            - run: sudo npm install yarn -g
             - run: yarn
-            - run: yarn watch
+            - run: yarn add node-abi@2.15.0
+            - run: yarn add electron-builder --dev
+            - run: yarn run dist --linux
+            - store_artifacts:
+                path: /root/project/build/linux
+  
+  build_windows:
+    executor: win/default
+    steps:
+      - checkout
+      - run: 
+          command: npm --add-python-to-path install --global --production windows-build-tools
+          shell: powershell.exe
+      - run: 
+          command: yarn
+          shell: cmd.exe
+      - run: 
+          command: yarn add electron-builder --dev
+          shell: cmd.exe
+      - run: 
+          command: yarn run dist --win
+          shell: cmd.exe
+      - store_artifacts:
+          path: /root/project/build/win
+
+  build_macos:
+      macos:
+        xcode: "11.3.0"
+      steps:
+       - checkout
+       - run: security create-keychain -p $KEYCHAIN_PASSWORD build.keychain
+       - run: security default-keychain -s build.keychain
+       - run: security unlock-keychain -p $KEYCHAIN_PASSWORD build.keychain
+       - run: echo $KEYSTORE | base64 --decode - > keystore.p12
+       - run: security import keystore.p12 -k build.keychain -P $KEYCHAIN_PASSWORD -T /usr/bin/codesign
+       - run: xcode-select --install
+       - run: yarn 
+       - run: yarn add electron-builder --dev
+       - run: yarn run dist --mac
+       - store_artifacts:
+            path: /root/project/build/mac
+  
 workflows:
     build-and-test:
       jobs:
-        - build-and-test
+        - build_linux
+        - build_windows
+        - build_macos
+
