--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - checkout
       - run: 
-          command: npm --add-python-to-path install --global --production windows-build-tools
+          command: npm --add-python-to-path install --global --production windows-build-tools --vs2015
           shell: powershell.exe
       - run: 
           command: yarn
