--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "name": "Microsoft Corporation"
   },
   "license": "MIT",
-  "main": "./out/main",
-  "private": true,
+  "main": "./out/main.js",
   "scripts": {
     "test": "mocha",
     "test-browser": "node test/unit/browser/index.js",
