--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "build": {
     "appId": "com.cactiva.app",
-    "asar":true,
+    "asar":false,
     "productName": "Cactiva",
     "copyright": "Copyright © 2020 Cactiva",
     "detectUpdateChannel": true,
